--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -81,8 +81,8 @@ section.multi-step-container {
         border-color: var(--step-id-finished-bgcolor);
       }
     }
-    &:hover .step--id, &:hover div p:first-of-type {
-      color: var(--step-id-finished-bgcolor);
+    &:hover .step--id {
+      color: tomato;
     }
     & div {
       text-align: right;
@@ -93,14 +93,34 @@ section.multi-step-container {
         color: #e1e1e1;
       }
     }
+    & .step--id.finished ~ div p:first-of-type {
+      color: var(--step-id-finished-bgcolor);
+    }
   }
 }
 
+
+
+.navigation-buttons {
+  display: flex;
+  position: absolute;
+  bottom: 18px;
+  justify-content: space-between;
+  align-items: flex-end;
+  width: 88%;
+  & .go--back--btn {
+    background-color: transparent;
+    color: #999;
+    font-size: 0.98rem;
+  }
+}
 
 /**************  FORM STEP ****************/
 .form__step {
   padding: 15px 30px;
   display: none;
+  height: 100%;
+  position: relative;
   & .step--title {
     font-size: 1.8rem;
     padding-bottom: 6px;
@@ -116,7 +136,7 @@ section.multi-step-container {
     padding: 18px 0 0 0;
     display: flex;
     flex-direction: column;
-    position: relative;
+    
     gap: 24px; /* Space between each (label & input) div container */
     & div * {
       display: block;
@@ -139,14 +159,11 @@ section.multi-step-container {
       }
     }
   }
-  
   & .step--submit--btn {
-    align-self: flex-end;
     background-color: var(--form-unique-bgcolor);
     color: #fff;
     border-radius: 8px;
     padding: 12px 17px;
-    margin-top: 14px;
     transition: 0.2s ease-out;
     &:hover {
       opacity: 0.7;
@@ -156,6 +173,8 @@ section.multi-step-container {
     }
   }
 }
+
+#form__step__1 .navigation-buttons { justify-content: flex-end; }
 
 .form__step.active { display: block; animation: form_step_anime 0.8s ease; }
 
@@ -195,6 +214,104 @@ section.multi-step-container {
 .plan.chose {
   border-color: var(--form-unique-color)!important;
 }
+.plan-type-switcher {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  background: red;
+  border-radius: 25px;
+  background-color: #eef;
+  font-size: 0.8rem;
+  color: #333;
+
+  & .switch {
+    margin: 15px;
+    position: relative;
+    display: inline-block;
+    width: 50px;
+    height: 24px;
+  }
+  & .switch input[type="checkbox"] {
+    opacity: 0;
+    width: 0;
+    height: 0;
+  }
+  & .slider {
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    cursor: pointer;
+    background-color: #ccc;
+    transition: 0.4s;
+  }
+  & .slider::before {
+    content: "";
+    position: absolute;
+    left: 4px;
+    bottom: 4px;
+    width: 16px;
+    height: 16px;
+    background-color: #FFF;
+    transition: 0.4s;
+  }
+  & input + .slider {
+    background-color: #011633;
+  }
+  & input:focus + .slider {
+    box-shadow: 0 0 1px #2196F3; 
+  }
+  & input:checked + .slider::before {
+    transform: translateX(26px);
+  }
+  & .slider.round {
+    border-radius: 34px;
+  }
+  & .slider.round::before {
+    border-radius: 50%;
+  }
+}
+/***** Addons *****/
+.addons {
+  padding: 20px 0;
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+}
+.addons .addon {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  padding: 18px 10px;
+  border: 2px solid #eee;
+  border-radius: 8px;
+  transition: 0.05s ease;
+  position: relative;
+  
+  & label {
+    cursor: pointer;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    padding-left: 15%;
+    align-content: center;
+  }
+  & label {
+    & span { display: block;}
+    & span:first-of-type {font-weight: 600; color: var(--form-unique-color); padding-bottom: 5px;}
+    & span:last-of-type {color: #444; font-size: 0.9rem;}
+  }
+  & input[type="checkbox"], .addon-price {
+    accent-color: purple;
+    color: purple;
+  }
+  &:hover { border-color: purple; }
+}
+.addon:has(input[type="checkbox"]:checked) { border-color: purple; }
+
 /*************** ANIMATION *************/
 @keyframes form_step_anime {
   from { opacity: 0; }
