--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -115,6 +115,17 @@ section.multi-step-container {
   }
 }
 
+.validate--message {
+  color: red;
+  position: absolute;
+  bottom: 28px;
+  left: 50%;
+  font-weight: bold;
+  text-decoration: underline;
+  user-select: none;
+  transform: translateX(-50%);
+}
+
 /**************  FORM STEP ****************/
 .form__step {
   padding: 15px 30px;
