Finished working on Validation for Step 2 and finished the billing toggler for monthly and yearly & fixed some small issues, TODO: finish the Summary Step then show Thanks Step, Make it fully responsive.

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -176,6 +176,10 @@ section.multi-step-container {
     border-radius: 8px;
     padding: 12px 17px;
     transition: 0.2s ease-out;
+    &.summary {
+      padding: 12px 26px;
+      background-color: mediumseagreen;
+    }
     &:hover {
       opacity: 0.7;
     }
