--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -33,7 +33,8 @@ button {
 }
 .flex { display: flex; }
 .flex.column { flex-direction: column; }
-
+.flex.space-between { justify-content: space-between; }
+.flex.align-center { align-items: center; }
 /************  MAIN & PARENT SECTION ************/
 main {
   display: flex;
@@ -204,8 +205,9 @@ section.multi-step-container {
     padding: 14px 10px;
     border-radius: 8px;
     background-color: transparent;
-    border: 1px solid #eee;
+    border: 2px solid #eee;
     text-align: left;
+    transition: 0.05s ease-in-out;
     
     & .plan-content {
       padding-top: 20px;
@@ -342,6 +344,36 @@ section.multi-step-container {
   top: 50%;
 }
 
+#summary {
+  background-color: var(--main-bgcolor);
+  padding: 12px 14px;
+  border-radius: 8px;
+  margin: 20px 0;
+  & .plan-summary div button {
+    margin-top: 6px;
+    font-size: 0.9rem;
+    color: #888;
+    background-color: transparent;
+    text-decoration: underline;
+  }
+  & hr {
+    margin: 14px 0;
+    border: 1px solid #ddd;
+  }
+  & ._addon_ {
+    padding: 8px 0;
+    color: #222;
+    font-size: 0.9rem;
+  }
+}
+#total-price {
+  display: flex;
+  justify-content: space-between;
+  & .total-price {
+    font-size: 2rem;
+    color: purple;
+  }
+}
 /*************** ANIMATION *************/
 @keyframes form_step_anime {
   from { opacity: 0; }
