--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -374,8 +374,32 @@ section.multi-step-container {
     color: purple;
   }
 }
+.thanks-container {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  text-align: center;
+  & img {
+    width: 84px;
+    margin-bottom: 4px;
+  }
+  & p {
+    font-size: 0.95rem;
+    color: #6f6f6f;
+  }
+  animation: thanks_anime 0.2s ease;
+}
+
 /*************** ANIMATION *************/
 @keyframes form_step_anime {
   from { opacity: 0; }
   to { opacity: 1; }
+}
+@keyframes thanks_anime {
+  from { transform: scale(0) }
+  to { transform: scale(1) }
 }
