Make the Project Responsive till zoom 60% in firefox esr

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -5,6 +5,12 @@
   --form-unique-color: #115;
   --form-unique-bgcolor: #003;
   --step-id-finished-bgcolor: #6e6;
+  --section-container-width: 740px;
+  --section-container-height: 450px;
+  --section-container-template: 25% auto;
+  --sidebar-desktop-gap: 14px;
+  --steps-sidebar-padding: 12px;
+  --step-bio-bottom-padding: 0;
 }
 * {
   padding: 0;
@@ -45,13 +51,13 @@ main {
 }
 section.multi-step-container {
   display: grid;
-  grid-template-columns: 25% auto;
+  grid-template-columns: var(--section-container-template);
   padding: 16px;
   gap: 20px;
   background-color: var(--section-bgcolor);
   border-radius: var(--sidebar-radius);
-  width: 740px; /* Width of the Multi STEP CONTAINER */
-  min-height: 450px;
+  width: var(--section-container-width); /* Width of the Multi STEP CONTAINER */
+  min-height: var(--section-container-height);
 }
 
 /**************  SIDEBAR ****************/
@@ -59,21 +65,21 @@ section.multi-step-container {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  padding: 12px;
+  padding: var(--steps-sidebar-padding);
   border-radius: var(--sidebar-radius);
 }
 .sidebar__desktop {
   background-image: url("./../images/bg-sidebar-desktop.svg");
-  gap: 14px;
+  gap: var(--sidebar-desktop-gap);
   
-  & button {
+  & .step--btn {
     align-items: center;
     background-color: transparent;
     justify-content: space-between;
     & .step--id {
       border-radius: 50%;
       padding: 6px 12px;
-      font-size: 0.88rem;
+      font-size: 0.9rem;
       color: #fff;
       border: 1px solid currentColor;
       &.finished {
@@ -89,9 +95,11 @@ section.multi-step-container {
       text-align: right;
       & p:first-of-type {
         color: #9f9f9f;
+        font-size: 1rem;
       }
       & p:last-of-type {
         color: #e1e1e1;
+        font-size: 0.95rem;
       }
     }
     & .step--id.finished ~ div p:first-of-type {
@@ -99,8 +107,6 @@ section.multi-step-container {
     }
   }
 }
-
-
 
 .navigation-buttons {
   display: flex;
@@ -140,8 +146,9 @@ section.multi-step-container {
   }
   
   & .step--bio {
-    font-size: 0.85rem;
+    font-size: 0.92rem;
     color: #999;
+    padding-bottom: var(--step-bio-bottom-padding);
   }
   
   & .step--form {
@@ -156,6 +163,7 @@ section.multi-step-container {
     & label {
       color: var(--form-unique-color);
       font-weight: 500;
+      font-size: 1.1rem;
     }
     & input {
       width: 100%;
@@ -163,7 +171,7 @@ section.multi-step-container {
       border: 0;
       border-radius: 4px;
       padding: 8px 10px;
-      font-size: 0.9rem;
+      font-size: 1rem;
       outline: 2px solid #eee;
       transition: 0.05s ease-out;
       &:focus {
@@ -176,6 +184,7 @@ section.multi-step-container {
     color: #fff;
     border-radius: 8px;
     padding: 12px 17px;
+    font-size: 1rem;
     transition: 0.2s ease-out;
     &.summary {
       padding: 12px 26px;
@@ -237,13 +246,14 @@ section.multi-step-container {
   align-items: center;
   justify-content: center;
   width: 100%;
-  background: red;
   border-radius: 25px;
   background-color: #eef;
   font-size: 0.8rem;
   color: #333;
   position: relative;
-
+  & .plan_type {
+    font-size: 0.95rem;
+  }
   & .switch {
     margin: 15px;
     position: relative;
@@ -317,8 +327,7 @@ section.multi-step-container {
     height: 100%;
     padding-left: 15%;
     align-content: center;
-  }
-  & label {
+    
     & span { display: block;}
     & span:first-of-type {font-weight: 600; color: var(--form-unique-color); padding-bottom: 5px;}
     & span:last-of-type {color: #444; font-size: 0.9rem;}
@@ -402,4 +411,97 @@ section.multi-step-container {
 @keyframes thanks_anime {
   from { transform: scale(0) }
   to { transform: scale(1) }
+}
+
+/*************** RESPONSIVE **************/
+@media (min-width: 1100px) {
+  :root {
+    --section-container-width: 830px;
+    --section-container-height: 500px;
+    --sidebar-desktop-gap: 16px;
+    --section-container-template: 27% auto;
+    --steps-sidebar-padding: 16px;
+    --step-bio-bottom-padding: 4px;
+  }
+  html {
+    font-size: 18px!important;
+  }
+  .step--form input {
+    margin-top: 10px!important;
+  }
+  .plan-type-switcher {
+    margin-top: 30px;
+  }
+  .plan-type-switcher .switch {
+    width: 60px;
+    height: 30px;
+  }
+  .plan-type-switcher .slider::before  {
+    width: 26px;
+    height: 22px;
+  }
+  #offer {
+    right: -45px;
+  }
+  .step--submit--btn {
+    font-size: 1.1rem;
+  }
+  .addon { padding: 24px 20px!important; }
+  .addon input[type="checkbox"] { transform: scale(1.4); }
+}
+@media (min-width: 1450px) {
+  :root {
+    --section-container-width: 940px;
+    --section-container-height: 600px;
+    --sidebar-desktop-gap: 20px;
+  }
+  html { font-size: 20px!important;}
+  .step--form input {
+    outline-width: 3px!important;
+    margin-top: 5px;
+    &:focus { outline-width: 5px!important }
+  }
+  .plan-type-switcher {
+    margin-top: 45px;
+  }
+  .plan {
+    padding: 24px 20px!important;
+    & img { width: 52px; }
+    & p {
+      font-size: 1.1rem;
+    }
+  }
+}
+@media (min-width: 1700px) {
+  :root {
+    --section-container-width: 1190px;
+    --section-container-height: 750px;
+    --sidebar-desktop-gap: 24px;
+  }
+  html { font-size: 24px!important; }
+  .step--form {
+    gap: 30px!important;
+    & input { margin-top: 13px!important;
+      padding: 15px 17px!important;
+      outline-color: #ccc!important;
+      &:focus {outline-color: dodgerblue!important;}
+    }
+  }
+  .plan img { width: 72px!important; }
+  .plan-type-switcher { padding: 18px 20px; }
+  .plan_type { font-size: 1.2rem!important; }
+  .plan-type-switcher .switch {
+    width: 70px;
+    height: 42px;
+    
+  }
+  .plan-type-switcher .slider::before {
+    width: 36px;
+    height: 30px;
+    bottom: 6px;
+  }
+  .addon {
+    padding: 28px 30px!important;
+    & input[type="checkbox"] { transform: scale(1.8); }
+  }
 }
