--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -6,11 +6,14 @@
   --form-unique-bgcolor: #003;
   --step-id-finished-bgcolor: #6e6;
   --section-container-width: 740px;
-  --section-container-height: 450px;
+  --section-container-height: 480px;
   --section-container-template: 25% auto;
   --sidebar-desktop-gap: 14px;
   --steps-sidebar-padding: 12px;
   --step-bio-bottom-padding: 0;
+  --step-form-1-input-outline-width: 2px;
+  --step-form-1-input-outline-color: #d6d6d6;
+  --step-form-1-input-radius: 4px;
 }
 * {
   padding: 0;
@@ -169,13 +172,15 @@ section.multi-step-container {
       width: 100%;
       margin-top: 7px; /* Space Between the input and the label */
       border: 0;
-      border-radius: 4px;
+      border-radius: var(--step-form-1-input-radius);
       padding: 8px 10px;
       font-size: 1rem;
-      outline: 2px solid #eee;
+      outline-width: var(--step-form-1-input-outline-width)!important;
+      outline-style: solid;
+      outline-color: var(--step-form-1-input-outline-color);
       transition: 0.05s ease-out;
       &:focus {
-        outline: 3px solid dodgerblue;
+        outline: calc(var(--step-form-1-input-outline-width) + 1px) solid dodgerblue;
       }
     }
   }
@@ -417,11 +422,12 @@ section.multi-step-container {
 @media (min-width: 1100px) {
   :root {
     --section-container-width: 830px;
-    --section-container-height: 500px;
+    --section-container-height: 520px;
     --sidebar-desktop-gap: 16px;
     --section-container-template: 27% auto;
     --steps-sidebar-padding: 16px;
     --step-bio-bottom-padding: 4px;
+    --step-form-1-input-outline-width: 3px;
   }
   html {
     font-size: 18px!important;
@@ -472,19 +478,19 @@ section.multi-step-container {
     }
   }
 }
-@media (min-width: 1700px) {
+@media (min-width: 1690px) {
   :root {
     --section-container-width: 1190px;
     --section-container-height: 750px;
+    --step-form-1-input-outline-width: 4px;
     --sidebar-desktop-gap: 24px;
+    --step-form-1-input-radius: 25px;
   }
   html { font-size: 24px!important; }
   .step--form {
     gap: 30px!important;
     & input { margin-top: 13px!important;
       padding: 15px 17px!important;
-      outline-color: #ccc!important;
-      &:focus {outline-color: dodgerblue!important;}
     }
   }
   .plan img { width: 72px!important; }
@@ -503,5 +509,22 @@ section.multi-step-container {
   .addon {
     padding: 28px 30px!important;
     & input[type="checkbox"] { transform: scale(1.8); }
+  }
+  .addons {gap: 22px;}
+  .step--id {
+    border-radius: 8px!important;
+  }
+}
+@media (min-width: 1900px) {
+  :root {
+    --section-container-width: 1440px;
+    --section-container-height: 900px;
+    --step-form-1-input-outline-width: 5px;
+    --sidebar-desktop-gap: 32px;
+    --step-form-1-input-radius: 8px;
+  }
+  html { font-size: 27px!important; }
+  .step--submit--btn:hover {
+    transform: scale(1.2);
   }
 }
