--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -35,6 +35,7 @@ input[type="number"]::-webkit-inner-spin-button,
 input[type="number"]::-webkit-outer-spin-button {
   -webkit-appearance: none;
 }
+
 /* Global Properties */
 button {
   cursor: pointer;
@@ -70,8 +71,7 @@ section.multi-step-container {
   background-position: center;
   padding: var(--steps-sidebar-padding);
   border-radius: var(--sidebar-radius);
-}
-.sidebar__desktop {
+
   background-image: url("./../images/bg-sidebar-desktop.svg");
   gap: var(--sidebar-desktop-gap);
   
@@ -407,7 +407,6 @@ section.multi-step-container {
   }
   animation: thanks_anime 0.2s ease;
 }
-
 /*************** ANIMATION *************/
 @keyframes form_step_anime {
   from { opacity: 0; }
@@ -526,5 +525,88 @@ section.multi-step-container {
   html { font-size: 27px!important; }
   .step--submit--btn:hover {
     transform: scale(1.2);
+  }
+}
+/********* Mobile Screens *******/
+@media (max-width: 580px) {
+  html { font-size: 14px; )
+  main { position: relative; 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100%;
+  }
+  .form__step { position: static; }
+  .steps__sidebar { 
+    position: fixed; 
+    top: 0;
+    width: 100%;
+    left: 0;
+    border-radius: 0 0 7.5% 7.5%;
+    background-image: url("./../images/bg-sidebar-mobile.svg");
+    background-position: top;
+    z-index: 2;
+    height: 75px;
+    flex-direction: row!important;
+    justify-content: center;
+    gap: 20px;
+    & .step--btn {
+      & .step--id { border-radius: 8px; padding: 12px 14px; font-size: 1.3rem; }
+    }
+    & .step--btn div {
+      display: none;
+    }
+    &:hover { opacity: 1}
+  }
+  section.multi-step-container {
+    width: 90%;
+    grid-template-columns: 1fr;
+    transition: 0.2s ease;
+    padding: 15px 0;
+  }
+  .form__step {
+    height: 100%;
+  }
+  
+  .validate--message {
+    position: relative;
+    padding-top: 25px;
+    height: 12px;
+  }
+  .navigation-buttons {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    padding: 8px;
+    background-color: #f2f2f2;
+    z-index: 5;
+    border: 1px solid #d2d2d2;
+  }
+  .plan-type-switcher {
+    margin-top: 35px;
+  }
+  #offer {
+    top: -8px;
+    right: -43px;
+  }
+  .addon .addon-price {  
+    padding-bottom: 20px;
+  }
+  .plans { grid-template-columns: 1fr; }
+  .plan { 
+    display: flex; 
+    justify-content: space-between; 
+    padding: 6px 8px;
+    flex-direction: row-reverse;
+    & img { width: 38px; }
+    & .plan-content { padding-top: 0!important; }
+  }
+  .go--back--btn { padding: 14px 8px; }
+}
+@media (max-width: 400px) or (max-height: 630px) {
+  html { font-size: 12px; }
+  .form__step {
+    padding-top: 40px;
   }
 }
